--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,14 @@
-# 3.24.1 is bundled in Visual Studio 2022 v17.4
-# 3.24.1 is also bundled in CLion as of 2023
-cmake_minimum_required(VERSION 3.24.1)
+cmake_minimum_required(VERSION 3.28)
 
-# This is the name of your plugin
-# This cannot have spaces (but PRODUCT_NAME can)
-set(PROJECT_NAME "FilterDSP")
-
-# Set the plugin formats you'll be building here.
-# Valid formats: AAX Unity VST AU AUv3 Standalone
+set(PROJECT_NAME "FMSynth")
 set(FORMATS AU Standalone)
 
-# Reads in VERSION file and sticks in it CURRENT_VERSION variable
-# Be sure the file has no newlines
 file(STRINGS VERSION CURRENT_VERSION)
 
-# For simplicity, the name of the project is also the name of the target
 project(${PROJECT_NAME} VERSION ${CURRENT_VERSION})
 
-# By default we don't want Xcode schemes to be made for modules, etc
 set(CMAKE_XCODE_GENERATE_SCHEME OFF)
 
-# Building universal binaries on macOS increases build time
-# This is set on CI but not during local dev
 if ((DEFINED ENV{CI}) AND (CMAKE_BUILD_TYPE STREQUAL "Release"))
     message("Building for Apple Silicon and x86_64")
     set(CMAKE_OSX_ARCHITECTURES arm64 x86_64)
@@ -29,37 +16,28 @@ endif ()
 
 set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13" CACHE STRING "Support macOS down to High Sierra")
 
-# Adds all the module sources so they appear correctly in the IDE
-# Must be set before JUCE is added as a sub-dir (or any targets are made)
-# https://github.com/juce-framework/JUCE/commit/6b1b4cf7f6b1008db44411f2c8887d71a3348889
 set_property(GLOBAL PROPERTY USE_FOLDERS YES)
 
-# Create a /Modules directory in the IDE with the JUCE Module code
 option(JUCE_ENABLE_MODULE_SOURCE_GROUPS "Show all module sources in IDE projects" ON)
 
-# JUCE is setup as a submodule in the /JUCE folder
-# Locally, you'll need to run `git submodule update --init --recursive` once
-# and `git submodule update --remote --merge` to keep it up to date
-# On Github Actions, it's managed by actions/checkout
 add_subdirectory(JUCE)
 
-# Check the readme at `docs/CMake API.md` in the JUCE repo for full config
 juce_add_plugin("${PROJECT_NAME}"
-    # VERSION ...                               # Set this if the plugin version is different to the project version
-    # ICON_BIG ...                              # ICON_* arguments specify a path to an image file to use as an icon for the Standalone
+    # VERSION ...
+    # ICON_BIG ...
     # ICON_SMALL ...
     COMPANY_NAME acanois
     BUNDLE_ID com.acanois.acanois
-    IS_SYNTH TRUE                               # Is this a synth or an effect?
-    NEEDS_MIDI_INPUT TRUE                       # Does the plugin need midi input?
-    # NEEDS_MIDI_OUTPUT TRUE/FALSE              # Does the plugin need midi output?
-    # IS_MIDI_EFFECT TRUE/FALSE                 # Is this plugin a MIDI effect?
-    # EDITOR_WANTS_KEYBOARD_FOCUS TRUE/FALSE    # Does the editor need keyboard focus?
+    IS_SYNTH TRUE
+    NEEDS_MIDI_INPUT TRUE
+    # NEEDS_MIDI_OUTPUT TRUE/FALSE
+    # IS_MIDI_EFFECT TRUE/FALSE
+    # EDITOR_WANTS_KEYBOARD_FOCUS TRUE/FALSE
     COPY_PLUGIN_AFTER_BUILD TRUE # On MacOS, plugin will be copied to /Users/you/Library/Audio/Plug-Ins/
-    PLUGIN_MANUFACTURER_CODE Acan               # This has to be one uppercase, rest lower for AU formats
-    PLUGIN_CODE P001                            # A unique four-character plugin id with at least one upper-case character
+    PLUGIN_MANUFACTURER_CODE Acan
+    PLUGIN_CODE P001
     FORMATS "${FORMATS}"
-    PRODUCT_NAME "${PROJECT_NAME}")             # The name of the final executable, which can differ from the target name
+    PRODUCT_NAME "${PROJECT_NAME}")
 
 # C++20, please
 target_compile_features("${PROJECT_NAME}" PRIVATE cxx_std_20)
@@ -78,19 +56,6 @@ set_target_properties("${PROJECT_NAME}" PROPERTIES FOLDER "")
 # The Xcode source tree should uhhh, still look like the source tree, yo
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/Source PREFIX "" FILES ${SourceFiles})
 
-# Setup our binary data as a target
-#juce_add_binary_data(Assets SOURCES pamplejuce.png)
-
-# Required for Linux happiness:
-# See https://forum.juce.com/t/loading-pytorch-model-using-binarydata/39997/2
-#set_target_properties(Assets PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
-
-# Clean up folder organization on Xcode.
-# It tucks the Plugin varieties into a "Targets" folder and generate an Xcode Scheme manually
-# Xcode scheme generation is turned off globally to limit noise from other targets
-# The non-hacky way of doing this is via the global PREDEFINED_TARGETS_FOLDER property
-# However that doesn't seem to be working in Xcode
-# Not all plugin types (au, vst) available on each build type (win, macos, linux)
 foreach(target ${FORMATS} "All")
     if(TARGET ${PROJECT_NAME}_${target})
         set_target_properties(${PROJECT_NAME}_${target} PROPERTIES
@@ -105,6 +70,8 @@ foreach(target ${FORMATS} "All")
             XCODE_GENERATE_SCHEME ON)
     endif()
 endforeach()
+
+# Uncomment for assets directory
 #set_target_properties(Assets PROPERTIES FOLDER "Targets")
 
 
@@ -137,18 +104,11 @@ if(WIN32) # Can't use MSVC here, as it won't catch Clang on Windows
     endif()
 endif()
 
-# Required for ctest (which is just easier for cross-platform CI)
-# include(CTest) does this too, but adds tons of targets we don't want
-# See: https://github.com/catchorg/Catch2/issues/2026
-# You also could forgo ctest and call ./Tests directly from the build dir
 enable_testing()
 
-# "GLOBS ARE BAD" is brittle and silly dev UX, sorry CMake!
-# CONFIGURE_DEPENDS / Clion's CMake integration makes globbing absolutely fine
 file(GLOB_RECURSE TestFiles CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Tests/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/Tests/*.h")
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/Tests PREFIX "" FILES ${TestFiles})
 
-# Use Catch2 v3 on the dev branch
 Include(FetchContent)
 FetchContent_Declare(
     Catch2
@@ -156,35 +116,8 @@ FetchContent_Declare(
     GIT_PROGRESS TRUE
     GIT_SHALLOW TRUE
     GIT_TAG v3.3.2)
-FetchContent_MakeAvailable(Catch2) # find_package equivalent
+FetchContent_MakeAvailable(Catch2)
 
-# Setup the test executable, again C++ 20 please
-#add_executable(Tests ${TestFiles}
-#    Source/EnvelopeGui.h)
-#target_compile_features(Tests PRIVATE cxx_std_20)
-
-# Our test executable also wants to know about our plugin code...
-#target_include_directories(Tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Source)
-#target_link_libraries(Tests PRIVATE Catch2::Catch2WithMain "${PROJECT_NAME}")
-
-# We can't link again to the shared juce target without ODL violations
-# However, we can steal its include dirs and compile definitions to use in tests!
-#target_compile_definitions(Tests INTERFACE $<TARGET_PROPERTY:${PROJECT_NAME},INTERFACE_COMPILE_DEFINITIONS>)
-#target_include_directories(Tests INTERFACE $<TARGET_PROPERTY:${PROJECT_NAME},INCLUDE_DIRECTORIES>)
-
-# Make an Xcode Scheme for the test executable so we can run tests in the IDE
-#set_target_properties(Tests PROPERTIES XCODE_GENERATE_SCHEME ON)
-
-# Organize the test source in the Tests/ folder in the IDE
-#source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/Tests PREFIX "" FILES ${TestFiles})
-
-# Load and use the .cmake file provided by Catch2
-# https://github.com/catchorg/Catch2/blob/devel/docs/cmake-integration.md
-# We have to manually provide the source directory here for now
-#include(${Catch2_SOURCE_DIR}/extras/Catch.cmake)
-#catch_discover_tests(Tests)
-
-# Color our warnings and errors
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     add_compile_options (-fdiagnostics-color=always)
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
